# mimicui

./: Cargo.toml  README.md  fragment3.html  index.html
.github/workflows/: build_checks.yaml  code_coverage.yaml  deploy_wasm.yaml
src/: bin.rs  lib.rs  main.rs  sanitizer.rs  scriptifier.rs
src/tools/: mod.rs  sanitizer.rs  scriptifier.rs
