[package]
name = "mimicui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Toy HTML-to-JS converter."
repository = "https://github.com/lensvol/mimicui"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mimicui"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mimicui"
path = "src/bin.rs"

[dependencies]
html_parser = "0.6.3"
wasm-bindgen = "0.2.83"

[dev-dependencies]
rstest = "0.16.0"

[profile.release]
lto = true
opt-level = 's'
